public/styles.css
ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    width: 350px;
    border-right: 1px solid #333;
}

li a {
    display: block;
    color: black;
    padding: 8px 16px;
    text-decoration: none;
}

li a:hover {
    background-color: #555555;
    color: white;
}

label {
    display: block;
}

.container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    align-content: center;
    min-height: 100vh;
}

form {
    margin-left: 100px;
}

.page-title {
    margin-left: 100px;
}

.row-inputs {
    display: flex;
    flex-direction: row;
}

.input-section {
    padding-left: 100px;
}

.input-section .review-section textarea {
    width: 800px;
    height: 200px;
    background-color: grey;
    color: white;
}

